// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scheduling service adds a scheduled flight 1`] = `
Array [
  ScheduledFlightAdded {
    "__typename": "ScheduledFlightAdded",
    "add": Object {
      "day": "2021-06-11",
      "scheduledArrival": 2021-06-12T02:30:00.000Z,
      "scheduledDeparture": 2021-06-11T20:30:00.000Z,
    },
    "flightNo": "PA576",
  },
]
`;

exports[`Scheduling service creates a flight 1`] = `
Array [
  FlightCreatedEvent {
    "__typename": "FlightCreated",
    "aircraftType": "B787-9",
    "destination": "MIA",
    "flightNo": "PA576",
    "origin": "SFO",
  },
]
`;

exports[`Scheduling service should reduce aggregate state from events 1`] = `
FlightSchedule {
  "__typename": "FlightSchedule",
  "aircraftType": "B787-9",
  "days": Map {
    "2021-06-11" => Object {
      "scheduledArrival": 2021-06-12T02:30:00.000Z,
      "scheduledDeparture": 2021-06-11T20:30:00.000Z,
    },
  },
  "destination": "MIA",
  "flightNo": "PA576",
  "origin": "SFO",
}
`;
